--- a/software/SConstruct
+++ b/software/SConstruct
@@ -27,10 +27,10 @@ for h in Split(INCLUDES_TO_CHECK):
                 Exit(1)
 
 # CHECKING LIBRAIRIES
-#for l in Split(LIBS_TO_CHECK):
-#        if not conf.CheckLib(l):
-#                print "lib: "+l+' must be installed!'
-#                Exit(1)
+for l in Split(LIBS_TO_CHECK):
+        if not conf.CheckLib(l):
+                print "lib: "+l+' must be installed!'
+                Exit(1)
 
 
 env = conf.Finish()
