Removing no-usefull files

--- a/software/SConstruct
+++ b/software/SConstruct
@@ -8,7 +8,7 @@ BIN_NAME = "openalchemist"
 
 FILES = "bin/Application.cpp bin/Preferences.cpp bin/IniFile.cpp bin/GameEngine.cpp bin/states/GameState.cpp bin/states/CommonState.cpp bin/misc.cpp bin/CommonResources.cpp bin/Player.cpp bin/HumanPlayer.cpp bin/DemoPlayer.cpp bin/Board.cpp bin/states/InGameState.cpp bin/states/GameOverState.cpp bin/ProgressBar.cpp bin/states/HighScoreState.cpp bin/FrontLayer.cpp bin/states/PauseMenuState.cpp bin/states/SkinsMenuState.cpp bin/Keys.cpp bin/states/OptionsMenuState.cpp bin/states/TitleState.cpp bin/states/QuitMenuState.cpp"
 
-CCFLAGS = "-Wall `pkg-config --cflags clanCore-0.8 clanDisplay-0.8 clanApp-0.8 clanGL-0.8 clanSDL-0.8`"
+CXXFLAGS = "-Wall `pkg-config --cflags clanCore-0.8 clanDisplay-0.8 clanApp-0.8 clanGL-0.8 clanSDL-0.8`"
 
 CPPPATH = ""
 
@@ -34,17 +34,18 @@ conf = Configure(env)
 #                Exit(1)
 
 # CHECKING LIBRAIRIES
-for l in Split(LIBS_TO_CHECK):
-        if not conf.CheckLib(l):
-                print "lib: "+l+' must be installed!'
-                Exit(1)
+#for l in Split(LIBS_TO_CHECK):
+#        if not conf.CheckLib(l):
+#                print "lib: "+l+' must be installed!'
+#                Exit(1)
 
 
 env = conf.Finish()
 
 # BUILDIND THE SOFTWARE
 BuildDir('bin', 'src')
-env.Program(BIN_NAME, Split(FILES), CPPPATH = Split(CPPPATH), CCFLAGS=CCFLAGS)
+opt = env.Program(BIN_NAME, Split(FILES), CPPPATH = Split(CPPPATH), CXXFLAGS=CXXFLAGS)
+Default(opt)
 
 
 # FUNCTION TO MAKE ZIP (SKINS)
