Fixing autotools (not fully)

--- a/software/configure.ac
+++ b/software/configure.ac
@@ -1,7 +1,15 @@
+% Prelude
 AC_INIT([openalchemist], [0.3], [openalchemist@gmail.com])
+AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall])
+
+% Check for programs
 AC_PROG_CXX
 
+% Check for header files
+AC_CHECK_HEADERS([iostream string vector list])
+
+% Check for libraries
 REQUIRED_CLANLIB_VERSION="0.8.0"
 PKG_CHECK_MODULES(clanlib,
 [
@@ -12,6 +20,9 @@ PKG_CHECK_MODULES(clanlib,
 	clanSDL-0.8 >= $REQUIRED_CLANLIB_VERSION
 ], [], [echo "This program needs ClanLib >= 0.8 (clanCore, clanApp, clanDisplay, clanGL, clanSDL)"; exit])
 
+% Outputfiles
+# AC CONFIG SRCDIR([src/Application.cpp])
 AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
+
