--- a/software/Makefile.in
+++ b/software/Makefile.in
@@ -172,7 +172,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = build
 dist_pkgdata_DATA = skins/aqua skins/brushed skins/vectoriel data/* CODE-LICENSE GRAPHICS-LICENSE
-CLEANFILES = skins/*.zip openalchemist
+CLEANFILES = skins/*.zip
 all: all-recursive
 
 .SUFFIXES:
@@ -632,12 +632,9 @@ uninstall-am: uninstall-dist_pkgdataDATA
 	uninstall uninstall-am uninstall-dist_pkgdataDATA
 
 
-all : skins/aqua.zip skins/brushed.zip skins/vectoriel.zip openalchemist
-static : openalchemist skins/aqua.zip skins/brushed.zip skins/vectoriel.zip
-	$(CXX) -o openalchemist-static *.o /usr/local/lib/libclanApp.a /usr/local/lib/libclanSDL.a /usr/local/lib/libclanDisplay.a /usr/local/lib/libclanGL.a /usr/local/lib/libclanCore.a /usr/local/lib/libclanSignals.a /usr/lib/libpng.a /usr/lib/libjpeg.a /usr/lib/libz.a /usr/lib/libXmu.a /usr/lib/libXi.a /usr/lib/libXxf86vm.a /usr/lib/libm.a /usr/lib/libGLU.a -lGL `sdl-config --static-libs`
-
-openalchemist: build/openalchemist
-	cp build/openalchemist openalchemist
+all : skins/aqua.zip skins/brushed.zip skins/vectoriel.zip
+	@echo "-----------------------------------------"
+	@echo "Compilation complete. Tip \"make install\" (as root) to finish installation."
 
 skins/aqua.zip : skins/aqua/*
 	cd skins/aqua && zip -q -r ../aqua * -x *svn*
