--- a/software/configure.ac
+++ b/software/configure.ac
@@ -1,5 +1,5 @@
 % Prelude
-AC_INIT([openalchemist], [0.3], [openalchemist@gmail.com])
+AC_INIT([openalchemist], [0.3], [contact@openalchemist.com])
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall])
 AC_CONFIG_SRCDIR([src/Application.cpp])
@@ -8,7 +8,7 @@ AC_CONFIG_SRCDIR([src/Application.cpp])
 AC_PROG_CXX
 
 % Check for header files
-AC_CHECK_HEADER([iostream string vector list])
+% AC_CHECK_HEADER([iostream string vector list])
 
 % Check for libraries
 REQUIRED_CLANLIB_VERSION="0.8.0"
@@ -22,7 +22,6 @@ PKG_CHECK_MODULES(clanlib,
 ], [], [echo "This program needs ClanLib >= 0.8 (clanCore, clanApp, clanDisplay, clanGL, clanSDL)"; exit])
 
 % Outputfiles
-# AC CONFIG SRCDIR([src/Application.cpp])
 AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_FILES([Makefile build/Makefile])
 AC_OUTPUT
