--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 SUBDIRS = build
 
+bin_SCRIPTS = openalchemist-config
+
 dist_pkgdata_DATA = skins/aqua skins/brushed skins/vectoriel data/* CODE-LICENSE GRAPHICS-LICENSE skins/aqua.zip skins/brushed.zip skins/vectoriel.zip
 
 all : skins/aqua.zip skins/brushed.zip skins/vectoriel.zip
