--- a/branches/psp/0.3beta/src/Makefile-3x
+++ b/branches/psp/0.3beta/src/Makefile-3x
@@ -22,13 +22,13 @@ SDL_CONFIG = $(PSPBIN)/sdl-config
 OBJS=psp_main.o psp_sdl.o InterfaceC_CPP.o GameEngine.o CommonResources.o Board.o CombosPainter.o misc.o Player.o IniFile.o Preferences.o Keys.o ProgressBar.o HumanPlayer.o DemoPlayer.o BitmapFont.o states/CommonState.o states/GameOverState.o states/InGameState.o states/OptionsMenuState.o states/PauseMenuState.o states/QuitMenuState.o states/SkinsMenuState.o states/GameState.o states/TitleState.o
 #to be added and managed later : FrontLayer.o
 DEFAULT_CFLAGS = -I/usr/local/pspdev/include/c++/4.1.0 $(shell $(SDL_CONFIG) --cflags) 
-PSP_FW_VERSION=401
+PSP_FW_VERSION = 500
 
 INCDIR = 
 #clanlib_CFLAGS = -I/usr/include/ClanLib-0.8  
 #clanlib_LIBS = -lclanApp -lclanGL -lclanSDL -lclanDisplay -lclanCore -lclanSignals  
 
-CFLAGS = $(DEFAULT_CFLAGS) -O2 -G0 -Wall -DPSP -DPSPFW30X -DNO_STDIO_REDIRECT 
+CFLAGS = $(DEFAULT_CFLAGS) -O2 -G0 -Wall -DDEBUG -DPSP -DPSPFW30X -DNO_STDIO_REDIRECT 
 
 # -DDEBUG
 
