--- a/branches/psp/0.3beta/preferences-0.3.ini
+++ b/branches/psp/0.3beta/preferences-0.3.ini
@@ -1,8 +1,8 @@
 [Preferences]
-OpenGL = False
+OpenGL = True
 Fullscreen = False
 Sound Level = 10
 Music Level = 10
 MaxFPS = 65
 Colorblind = False
-Skin = vectoriel
+Skin = aqua
