fix standy by mode (gameEngine) / manage opengl thru preferences (need to add menu entry

--- a/0.3beta/preferences-0.3.ini
+++ b/0.3beta/preferences-0.3.ini
@@ -1,8 +1,8 @@
 [Preferences]
-OpenGL = False
+OpenGL = True
 Fullscreen = False
 Sound Level = 10
 Music Level = 10
 MaxFPS = 65
 Colorblind = False
-Skin = vectoriel
+Skin = aqua
