--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -18,10 +18,12 @@ PKG_CHECK_MODULES(clanlib,
 	clanApp-2.1 >= $REQUIRED_CLANLIB_VERSION
 	clanDisplay-2.1 >= $REQUIRED_CLANLIB_VERSION
 	clanGL-2.1 >= $REQUIRED_CLANLIB_VERSION
-], [], [echo "This program needs ClanLib >= 2.0 (clanCore, clanApp, clanDisplay, clanGL)"; exit])
+	clanSound-2.1 >= $REQUIRED_CLANLIB_VERSION
+  clanVorbis-2.1 >= $REQUIRED_CLANLIB_VERSION
+], [], [echo "This program needs ClanLib >= 2.0 (clanCore, clanApp, clanDisplay, clanGL, clanSound, clanVorbis)"; exit])
 
 % Outputfiles
-AC_CONFIG_HEADERS([src/config.h])
+% AC_CONFIG_HEADERS([src/config.h])
 AC_CONFIG_FILES([Makefile build/Makefile])
 AC_OUTPUT
 
